# poproaster

./: .clang-format  .gitignore
.specify/: feature.json  init-options.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/artisan_adapter/: CMakeLists.txt  artisan_bridge.c
firmware/components/artisan_adapter/include/artisan_adapter/: artisan_bridge.h
firmware/components/board_config/: CMakeLists.txt  Kconfig
firmware/components/board_config/boards/: board_jc4827w543.h
firmware/components/board_config/include/: board_config.h
firmware/components/roast_core/: CMakeLists.txt  command_dispatcher.c  dtr_calculator.c  heater_pid.c  profile_curve_follower.c  roast_events.c  roast_profile.c  roast_telemetry_service.c  ror_calculator.c  session_recovery.c  session_state_machine.c
firmware/components/roast_core/include/roast_core/: command_dispatcher.h  dtr_calculator.h  heater_pid.h  profile_curve_follower.h  roast_events.h  roast_profile.h  roast_telemetry_service.h  ror_calculator.h  session_recovery.h  session_state_machine.h
firmware/components/roaster_hal/: CMakeLists.txt  fan_pwm.c  max6675.c  ota_manager.c  ssr_heater.c  touch_driver.c  wifi_provisioning.c
firmware/components/roaster_hal/include/hal/: fan_pwm.h  max6675.h  ota_manager.h  ssr_heater.h  touch_driver.h  wifi_provisioning.h
firmware/components/safety/: CMakeLists.txt  duration_watchdog.c  fan_failure_detector.c  safety_manager.c
firmware/components/safety/include/safety/: duration_watchdog.h  fan_failure_detector.h  safety_manager.h
firmware/components/storage/: CMakeLists.txt  nvs_store.c  profile_store.c  session_store.c
firmware/components/ui_display/: CMakeLists.txt  display_panel.c  i18n.c  nv3041_qspi.c  status_screen.c
firmware/components/ui_display/include/ui_display/: display_panel.h  i18n.h  nv3041_qspi.h  status_screen.h
firmware/components/ui_display/include/ui_display/screens/: manual_control.h  peripheral_test.h  placeholder_screen.h  profile_editor.h  profile_list.h  roast_dashboard.h  sensor_calibration.h  session_review.h  settings_hub.h  wifi_setup.h
firmware/components/ui_display/include/ui_display/widgets/: nav_shell.h
firmware/components/ui_display/screens/: manual_control.c  peripheral_test.c  placeholder_screen.c  profile_editor.c  profile_list.c  roast_dashboard.c  sensor_calibration.c  session_review.c  settings_hub.c  wifi_setup.c
firmware/components/ui_display/widgets/: nav_shell.c
firmware/components/web_api/: CMakeLists.txt  dashboard_routes.c  diagnostics_routes.c  history_routes.c  ota_routes.c  presets_routes.c  server.c  wifi_setup_routes.c
firmware/components/web_api/include/web_api/: dashboard_routes.h  diagnostics_routes.h  history_routes.h  ota_routes.h  presets_routes.h  server.h  wifi_setup_routes.h
firmware/docs/: artisan-integration.md  quickstart-desk-check.md
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
specs/001-pop-roaster-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pop-roaster-control/checklists/: requirements.md
specs/001-pop-roaster-control/contracts/: artisan-compatibility.md  web-api.yaml
webui/src/: index.html  styles.css
(+3 files in other folders)
